@startuml MovementStrategy

class Movement{
    -moveDirectionStrategy : MoveDirectionStrategy
    -movePatternStrategy : MovePatternStrategy
    -gameSpeed : ObjectSpeedStrategy
    +MovementStrategy(moveP : MovePatternStrategy, moveD : MoveDirectionStrategy,gameSpeed : SpeedStrategy)
    +MovementStrategy(moveP : MovePatternStrategy, moveD : MoveDirectionStrategy) 
    /'second constructor to make a movement without speed aka difault speed?'/

    +move(o : FallingObject,gameSpeed : SpeedStrategy) : void
}


interface MovePatternStrategy { 
    +patternMove() : void
}

class OscillationStrategy { 

}


class NoOscillationStrategy { 
    
}

interface MoveDirectionStrategy{
    +directionMove() : void
}

class DownOnlyStrategy{

}

class RightDiagonalStrategy {

}

class LeftDiagonalStrategy {

}

Movement o-- MoveDirectionStrategy
Movement o-- MovePatternStrategy

MoveDirectionStrategy <|.. DownOnlyStrategy 
MoveDirectionStrategy <|.. RightDiagonalStrategy 
MoveDirectionStrategy <|.. LeftDiagonalStrategy 

MovePatternStrategy <|.. NoOscillationStrategy
MovePatternStrategy <|.. OscillationStrategy

@enduml